--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Rules-Requires-Root: no
 Build-Depends:
  debhelper (>= 10.10.7~),
  libcleri-dev,
+ libpcre2-dev,
  libpcre3-dev,
  libuv1-dev,
  uuid-dev,
