--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,7 @@ export DEB_BUILD_MAINT_OPTIONS=hardening=+all
 
 override_dh_auto_build-arch:
 	$(MAKE) --directory=Release
+	help2man -N -n"time series database server" Release/siridb-server > Release/siridb-server.1
 
 override_dh_auto_clean:
 	$(MAKE) --directory=Release clean
